misc: Create expression benchmark for default engine (#1220)
## What changes are proposed in this pull request?

#1192 added a makeshift benchmark test to measure the performance of the
new `ToJson` expression. This PR migrates this test to a dedicated
`expression_bench` for the default engine.

This PR only adds `ToJson` to `expression_bench`, but this can be
extended as necessary in future PRs.

## How was this change tested?

N/A - this PR adds a performance benchmark.

---------

Co-authored-by: Zach Schuermann <zachary.zvs@gmail.com>

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -152,3 +152,7 @@ tracing-subscriber = { version = "0.3", default-features = false, features = [
 [[bench]]
 name = "metadata_bench"
 harness = false
+
+[[bench]]
+name = "expression_bench"
+harness = false
