--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
     "feature-tests",
     "mem-test",
     "uc-client", # WIP: this is an experimental UC client for catalog-managed table work
+    "uc-catalog", # WIP: this is an experimental UC catalog implementation
 ]
 # note that in addition to the members above, the workspace includes examples:
 # - inspect-table
