fix: unpin cbindgen (#1414)
## What changes are proposed in this pull request?
pretty quick response + release from cbindgen folks. now we can unpin
and depend on known-good and above version (0.29.2).

resolves #1413 

## How was this change tested?
`cargo c`

Co-authored-by: Fokko Driesprong <fokko@apache.org>

--- a/ffi/Cargo.toml
+++ b/ffi/Cargo.toml
@@ -28,7 +28,7 @@ delta_kernel = { path = "../kernel", default-features = false, features = [
 delta_kernel_ffi_macros = { path = "../ffi-proc-macros", version = "0.16.0" }
 
 [build-dependencies]
-cbindgen = "=0.29.0"
+cbindgen = "0.29.2"
 libc = "0.2.175"
 
 [dev-dependencies]
