--- a/kernel/examples/read-table-multi-threaded/Cargo.toml
+++ b/kernel/examples/read-table-multi-threaded/Cargo.toml
@@ -5,11 +5,12 @@ edition = "2021"
 publish = false
 
 [dependencies]
-arrow = { version = "56", features = ["prettyprint", "chrono-tz"] }
+arrow = { version = "57", features = ["prettyprint", "chrono-tz"] }
 clap = { version = "4.5", features = ["derive"] }
+# common pulls in arrow latest so we have to keep all these in sync here
 common = { path = "../common" }
 delta_kernel = { path = "../../../kernel", features = [
-  "arrow-56",
+  "arrow",
   "default-engine-rustls",
   "internal-api",
 ] }
