feat(FFI): snapshot log tail FFI (#1379)
## What changes are proposed in this pull request?
Adds two new APIs for our FFI to support catalog-managed tables:
1. `snapshot_with_log_tail` to get the latest snapshot of a
catalog-managed table
2. `snapshot_at_version_with_log_tail` to get the snapshot of a
catalog-managed table at a specific version

And in order to implement the above, a new `LogPathArray` type is
introduced to communicate `Vec<LogPath>` across FFI (basically just uses
ptr + len for the array type and the `FfiLogPath` does KernelStringSlice
+ size + mod time)

The above APIs are behind a new `catalog-managed` (FFI) feature flag
similar to kernel's own `catalog-managed` flag.

## How was this change tested?
new UT

--- a/ffi/Cargo.toml
+++ b/ffi/Cargo.toml
@@ -46,6 +46,7 @@ object_store = "0.12.3"
 default = ["default-engine-rustls"]
 default-engine-native-tls = ["delta_kernel/default-engine-native-tls", "default-engine-base"]
 default-engine-rustls = ["delta_kernel/default-engine-rustls", "default-engine-base"]
+catalog-managed = ["delta_kernel/catalog-managed"]
 
 # This is an 'internal' feature flag which has all the shared bits from default-engine-native-tls and
 # default-engine-rustls. There is a check in kernel/lib.rs to ensure you have enabled one of
