--- a/acceptance/Cargo.toml
+++ b/acceptance/Cargo.toml
@@ -36,6 +36,7 @@ tar = "0.4"
 [dev-dependencies]
 datatest-stable = "0.3"
 test-log = { version = "0.2", default-features = false, features = ["trace"] }
+test_utils = { path = "../test-utils" }
 tempfile = "3"
 test-case = { version = "3.3.1" }
 tokio = { version = "1.47" }
