--- a/ffi/Cargo.toml
+++ b/ffi/Cargo.toml
@@ -32,6 +32,7 @@ cbindgen = "0.29.2"
 libc = "0.2.175"
 
 [dev-dependencies]
+paste = "1.0"
 rand = "0.9.2"
 serde = "1.0.219"
 serde_json = "1.0.142"
