--- a/ffi/examples/visit-expression/CMakeLists.txt
+++ b/ffi/examples/visit-expression/CMakeLists.txt
@@ -1,9 +1,11 @@
 cmake_minimum_required(VERSION 3.12)
 project(visit_expressions)
 
-add_executable(visit_expression visit_expression.c)
+add_executable(visit_expression visit_expression.c ../common/kernel_utils.c)
 target_compile_definitions(visit_expression PUBLIC DEFINE_DEFAULT_ENGINE_BASE)
-target_include_directories(visit_expression PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../../../target/ffi-headers")
+target_include_directories(visit_expression PUBLIC 
+    "${CMAKE_CURRENT_SOURCE_DIR}/../../../target/ffi-headers"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../common")
 target_link_directories(visit_expression PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../../../target/debug")
 target_link_libraries(visit_expression PUBLIC delta_kernel_ffi)
 target_compile_options(visit_expression PUBLIC)
