--- a/uc-client/Cargo.toml
+++ b/uc-client/Cargo.toml
@@ -14,7 +14,7 @@ version.workspace = true
 release = false
 
 [dependencies]
-reqwest = { version = "0.12", features = ["json"] }
+reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "http2", "json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
